--- a/frappe/public/scss/common/global.scss
+++ b/frappe/public/scss/common/global.scss
@@ -31,6 +31,8 @@ html, body {
 
 .frappe-card {
 	@include card();
+	box-shadow: none;
+	border: 1px solid var(--gray-300);
 }
 
 .frappe-control[data-fieldtype="Select"] .control-input,
@@ -43,7 +45,6 @@ html, body {
 		/* for Chrome */
 		-webkit-appearance: none;
 
-		padding-top: 3px;
 	}
 
 	.select-icon {
