--- a/frappe/public/scss/desk/avatar.scss
+++ b/frappe/public/scss/desk/avatar.scss
@@ -12,11 +12,11 @@
 	--blue-avatar-bg: var(--blue-50);
 	--blue-avatar-color: var(--blue-500);
 
-	--green-avatar-bg: var(--green-50);
-	--green-avatar-color: var(--green-500);
+	--green-avatar-bg: var(--green-200);
+	--green-avatar-color: var(--green-700);
 
-	--dark-green-avatar-bg: var(--dark-green-50);
-	--dark-green-avatar-color: var(--dark-green-500);
+	--dark-green-avatar-bg: var(--dark-green-200);
+	--dark-green-avatar-color: var(--dark-green-700);
 
 	--red-avatar-bg: var(--red-50);
 	--red-avatar-color: var(--red-500);
